[package]
name = "herschel"
version = "0.1.0"
edition = "2018"
author = "abhi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.28.0"
thiserror = "1.0.24"
log = "0.4.14"
env_logger = "0.8.3"

[[test]]
name = "ping"
path = "tests/test_sending_recving.rs"

[[test]]
name = "ips"
path = "tests/test_get_local_ip.rs"
